# Nexarchive

./: .gitignore  CHANGELOG.md  README.md  codingPlan.md  demand.md  index.html  package-lock.json  package.json  reference.md
.claude/: settings.json
.claude/commands/trellis/: brainstorm.md  start.md
.claude/skills/release-changelog/: SKILL.md
.github/workflows/: release.yml
scripts/release/: extract-changelog.mjs  prepare-version.mjs  publish-release.bat  verify-version.mjs
src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  constants.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: config_service.rs  db_service.rs  extractor_service.rs  init_service.rs  llm_service.rs  logging_service.rs  mineru_service.rs  mod.rs  scheduler_service.rs  system_service.rs
src-tauri/src/utils/: path_utils.rs
src/data/: folderTree.ts
src/pages/: DashboardPage.tsx  InitWizardPage.tsx  JobsPage.tsx  RulesPage.tsx  SettingsPage.tsx
