[package]
name = "nexarchive"
version = "0.1.5"
edition = "2021"
description = "NexArchive Windows local file archiver"
authors = ["NexArchive"]

[lib]
name = "nexarchive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
aes-gcm = "=0.10.3"
anyhow = "=1.0.95"
base64 = "=0.22.1"
chrono = { version = "=0.4.39", features = ["serde"] }
dirs = "=5.0.1"
rand = "=0.8.5"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.137"
sha2 = "=0.10.8"
tauri = { version = "=2.10.2", features = ["tray-icon"] }
thiserror = "=2.0.11"
tokio = { version = "=1.43.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
trash = "=5.2.1"
uuid = { version = "=1.12.1", features = ["v4", "serde"] }
walkdir = "=2.5.0"
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "=2.10.0"

[target.'cfg(windows)'.dependencies]
winreg = "=0.52.0"


